# kickstart.nvim

./: init.lua  pyproject.toml
lua/custom/plugins/: lazygit.lua  toggleterm.lua  tpope.lua
lua/kickstart/plugins/: lint.lua
