[project]
name = "nvim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.8.2",
    "jupyter-client>=8.8.0",
    "kaleido>=1.2.0",
    "plotly>=6.5.2",
    "pnglatex>=1.1",
    "pynvim>=0.6.0",
    "pyperclip>=1.11.0",
]
